<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/offline_mode_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode_text_view_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/offline_mode_button_1vsAI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/offline_mode_button_1vsAI_label" />

            <Button
                android:id="@+id/offline_mode_button_1vs1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/offline_mode_button_1vs1_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/offline_mode_button_teamvsteam"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/offline_mode_button_teamvsteam_label" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/online_mode_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_mode_text_view_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/online_mode_button_1vs1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/online_mode_button_1vs1_label" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>